# Stiff-GIPC-Win

./: .gitignore  BUILD_WINDOWS.md  CMakeLists.txt  QUICK_START.md  README.md  TROUBLESHOOTING.md  setup-dependencies.ps1
Assets/scene/: abd_system_config.json  parameterSetting.txt
Assets/sorted_mesh/: bunny2_sorted.16.msh  high_mat_sorted.16.part
MeshProcess/metis_partition/: CMakeLists.txt
MeshProcess/metis_partition/src/: mesh.cpp
StiffGIPC/: GIPC.cu  PCG_SOLVER.cu  PCG_SOLVER.cuh  device_fem_data.cu  device_fem_data.cuh  femEnergy.cu  femEnergy.cuh  gl_main.cu  load_mesh.cpp  load_mesh.h
StiffGIPC/abd_system/abd_system_function/: setup_abd_system_gradient_and_hessian.cu
StiffGIPC/linear_system/solver/: pcg_solver.cu  pcg_solver.h
